--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,18 @@
 h1 {
   text-transform: uppercase;
+  color: blueviolet;
 }
 
 span {
   text-transform: uppercase;
+  font-weight: 700;
+  font-family: sans-serif;
+}
+
+button {
+  padding: 10px 20px;
+  background: black;
+  color: white;
+  font-size: 1.5em;
+  font-weight: 700;
 }
