--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,17 @@ button {
   font-size: 1.5em;
   font-weight: 700;
 }
+
+.image {
+  height: 250px;
+  width: 500px;
+  background-image: url(https://source.unsplash.com/500x250);
+}
+
+@media (min-resolution: 2dppx) {
+  .image {
+    height: 50px;
+    width: 100px;
+    background-image: url(https://source.unsplash.com/100x50);
+  }
+}
