--- a/src/index.css
+++ b/src/index.css
@@ -2,40 +2,27 @@
 @tailwind base;
 /* purgecss end ignore */
 
-h1 {
-  text-transform: uppercase;
-  color: blueviolet;
+body {
+  @apply bg-white;
 }
 
-span {
-  text-transform: uppercase;
-  font-weight: 700;
-  font-family: sans-serif;
+h1, h2, h3, h4 {
+  @apply font-display text-black
 }
 
-button {
-  padding: 10px 20px;
-  background: black;
-  color: white;
-  font-size: 1.5em;
-  font-weight: 700;
+.heroHome article h1{
+   @apply text-tan font-display text-2xl;
+ }
+
+ header {
+   @apply font-body text-tan;
+ }
+
+footer {
+  @apply bg-tan;
 }
 
-.image {
-  height: 250px;
-  width: 500px;
-  background-image: url(https://source.unsplash.com/500x250);
-}
+ footer h1, h2, h3, h5, p, a {
+   @apply font-body text-white;
+ }
 
-@media (min-resolution: 2dppx) {
-  .image {
-    height: 50px;
-    width: 100px;
-    background-image: url(https://source.unsplash.com/100x50);
-  }
-}
-
-.notused {
-  content: 'some random bs';
-  color: pink;
-}
