--- a/src/index.twig
+++ b/src/index.twig
@@ -1,1 +1,6 @@
-<h1 class='text-black'>Black</h1>
+<h1 class="redish">red</h1>
+<h1 class='text-grey'>Gray</h1>
+<h1 class='text-teal'>Teal</h1>
+
+{% include "./blocks/hero/hero.twig" %}
+{% include "./blocks/cta/cta.twig" %}
