--- a/src/index.twig
+++ b/src/index.twig
@@ -1,6 +1,3 @@
-<h1 class="redish">red</h1>
-<h1 class='text-grey'>Gray</h1>
-<h1 class='text-teal'>Teal</h1>
-
+{% include "./globals/header/header.twig" %}
 {% include "./blocks/hero/hero.twig" %}
 {% include "./blocks/cta/cta.twig" %}
