updated config and package.json, and tested

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
-@import-glob "blocks/**/*.css";
+@import-glob "atoms/**/*.css";
+/* @import-glob "molecules*.css"; */
+/* @import-glob "organisms*.css"; */
 /**
 https://www.meidev.co/blog/visual-studio-code-css-linting-with-tailwind/
 */
